deploy/users/sungwookoo/nextjs-sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-sample
  namespace: user-sungwookoo
  labels:
    app: nextjs-sample
    swkoo.kr/user: sungwookoo
spec:
  selector:
    app: nextjs-sample
  ports:
    - name: http
      port: 80
      targetPort: http
